@@ -30,17 +30,17 @@
 	</protocol-plugin>
         <protocol-plugin protocol="Citrix" class-name="org.opennms.netmgt.capsd.CitrixPlugin" scan="on" user-defined="false">
 		<property key="timeout" value="3000"/>
-		<property key="retry" value="3"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
         <protocol-plugin protocol="LDAP" class-name="org.opennms.netmgt.capsd.LdapPlugin" scan="on" user-defined="false">
 		<property key="version" value="3"/>
                 <property key="timeout" value="3000"/>
-		<property key="retry" value="3"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
         <protocol-plugin protocol="SNMP" class-name="org.opennms.netmgt.capsd.SnmpPlugin" scan="on" user-defined="false">
 		<property key="force version" value="SNMPv1"/>
 		<property key="timeout" value="2000"/>
-		<property key="retry" value="3"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="SMB"  class-name="org.opennms.netmgt.capsd.SmbPlugin" scan="on" user-defined="false"/>
 	<protocol-plugin protocol="HTTP" class-name="org.opennms.netmgt.capsd.HttpPlugin" scan="on" user-defined="false">
@@ -71,19 +71,19 @@
 	<protocol-plugin protocol="FTP"  class-name="org.opennms.netmgt.capsd.FtpPlugin" scan="on" user-defined="false">
 		<property key="port" value="21"/>
 		<property key="timeout" value="2000"/>
-		<property key="retry" value="3"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="Telnet" class-name="org.opennms.netmgt.capsd.TcpPlugin" scan="on" user-defined="false">
 		<property key="banner" value="*"/>
 		<property key="port" value="23"/>
 		<property key="timeout" value="3000"/>
-		<property key="retry" value="3"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="DNS"  class-name="org.opennms.netmgt.capsd.DnsPlugin" scan="on" user-defined="false">
 		<property key="port" value="53"/>
 		<property key="timeout" value="5000"/>
 		<property key="retry" value="2"/>
-		<property key="lookup" value="www.opennms.org"/>
+		<property key="lookup" value="localhost"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="DHCP" class-name="org.opennms.netmgt.capsd.DhcpPlugin" scan="on" user-defined="false">
 		<property key="timeout" value="3000"/>
@@ -92,14 +92,14 @@
 	<protocol-plugin protocol="IMAP" class-name="org.opennms.netmgt.capsd.ImapPlugin" scan="on" user-defined="false">
 		<property key="port" value="143"/>
 		<property key="timeout" value="3000"/>
-		<property key="retry" value="0"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="MSExchange" class-name="org.opennms.netmgt.capsd.MSExchangePlugin" scan="on" user-defined="false">
 		<property key="pop3 port" value="110"/>
 		<property key="imap port" value="143"/>
 		<property key="mapi port" value="593"/>
 		<property key="timeout" value="3000"/>
-		<property key="retry" value="0"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="SMTP" class-name="org.opennms.netmgt.capsd.SmtpPlugin" scan="on" user-defined="false">
 		<property key="port" value="25"/>
@@ -109,61 +109,61 @@
 	<protocol-plugin protocol="POP3" class-name="org.opennms.netmgt.capsd.Pop3Plugin" scan="on" user-defined="false">
 		<property key="port" value="110"/>
 		<property key="timeout" value="3000"/>
-		<property key="retry" value="0"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="SSH" class-name="org.opennms.netmgt.capsd.SshPlugin" scan="on" user-defined="false">
 		<property key="banner" value="SSH"/>
 		<property key="port" value="22"/>
 		<property key="timeout" value="3000"/>
-		<property key="retry" value="3"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="MySQL" class-name="org.opennms.netmgt.capsd.TcpPlugin" scan="on" user-defined="false">
 		<property key="banner" value="*"/>
 		<property key="port" value="3306"/>
 		<property key="timeout" value="3000"/>
-		<property key="retry" value="3"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="SQLServer" class-name="org.opennms.netmgt.capsd.TcpPlugin" scan="on" user-defined="false">
 		<property key="banner" value="*"/>
 		<property key="port" value="1433"/>
 		<property key="timeout" value="3000"/>
-		<property key="retry" value="3"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="Informix" class-name="org.opennms.netmgt.capsd.TcpPlugin" scan="on" user-defined="false">
 		<property key="banner" value="*"/>
 		<property key="port" value="1536"/>
 		<property key="timeout" value="3000"/>
-		<property key="retry" value="3"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="Sybase" class-name="org.opennms.netmgt.capsd.TcpPlugin" scan="on" user-defined="false">
 		<property key="banner" value="*"/>
 		<property key="port" value="1498"/>
 		<property key="timeout" value="3000"/>
-		<property key="retry" value="3"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="Oracle" class-name="org.opennms.netmgt.capsd.TcpPlugin" scan="on" user-defined="false">
 		<property key="banner" value="*"/>
 		<property key="port" value="1521"/>
 		<property key="timeout" value="3000"/>
-		<property key="retry" value="3"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="Postgres" class-name="org.opennms.netmgt.capsd.TcpPlugin" scan="on" user-defined="false">
 		<property key="banner" value="*"/>
 		<property key="port" value="5432"/>
 		<property key="timeout" value="3000"/>
-		<property key="retry" value="3"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
 	<protocol-plugin protocol="Router" class-name="org.opennms.netmgt.capsd.SnmpPlugin" scan="on" user-defined="false">
 		<property key="vbname" value=".1.3.6.1.2.1.4.1"/>
 		<property key="vbvalue" value="1"/>
 		<property key="timeout" value="2000"/>
-		<property key="retry" value="3"/>
+		<property key="retry" value="2"/>
 	</protocol-plugin>
         <protocol-plugin protocol="Dell-OpenManage" class-name="org.opennms.netmgt.capsd.TcpPlugin" scan="on" user-defined="false">
                 <property key="banner" value="*"/>
                 <property key="port" value="1311"/>
                 <property key="timeout" value="3000"/>
-                <property key="retry" value="3"/>
+                <property key="retry" value="2"/>
         </protocol-plugin>
 
 	<smb-config>
