@@ -41,6 +41,7 @@
         <event-file>@install.etc.dir@/events/Nokia.events.xml</event-file>
         <event-file>@install.etc.dir@/events/Novell.events.xml</event-file>
         <event-file>@install.etc.dir@/events/Oracle.events.xml</event-file>
+        <event-file>@install.etc.dir@/events/Patrol.events.xml</event-file>
         <event-file>@install.etc.dir@/events/Quintum.events.xml</event-file>
         <event-file>@install.etc.dir@/events/Redline.events.xml</event-file>
         <event-file>@install.etc.dir@/events/Sensaphone.events.xml</event-file>
